--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-MNGO_URI = mongodb://mongo:27017/mongo_songs
-NODE_ENV = production
+MNGO_URI=mongodb://root:root123@mongo:27017/?authSource=admin
+NODE_ENV = development
