--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.11.0",
